# smartfusion_cmake

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  flash.sh
firmware/: README.txt  system_cmsis_svd.xml  system_hw_platform.h
firmware/drivers_config/sys_config/: sys_config_mss_clocks.h
firmware/filelist/: system_sb_MSS_CM3_hw_platform.cxf  workspace.cxf
src/: main.c
tools/: toolchain-arm-none-eabi.cmake
